--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ loguru==0.5.3
 pydantic==1.8.2
 python-dotenv==0.19.2
 PyYAML==6.0
+qrcode==7.3.1
 sniffio==1.2.0
 starlette==0.16.0
 typing_extensions==4.0.1
